# qquest

./: .coveragerc  .flake8  .gitignore  IonQuHack2025.ipynb  README.md  import final_score.py  notes.md  pyproject.toml  requirements.txt  setup.py  version.txt
.github/workflows/: python-app.yml
CHP/aaranson_chp/: chp.c
final_score/: ansatz_ham.py  final_score.py  graphs.py  qit_evolver.py  utils.py  variables.py
notebooks/: classiq_challenge.ipynb  example_code.ipynb  part1_example_cirq.ipynb
qquest/: circ.py  utils.py
scripts/: activate.sh  activate_poetry_env.sh  create_virtual_env.sh  setup_poetry_env.sh
tests/: test_utils.py
