[tool.poetry]
name = "qquest"
version = "1.0.0"
description = "A repo for the 2024 iQuHack"
authors = ["josh fernandes <joshfernandes@mac.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
cirq = "^1.4"
idna = "^3.10"
jupyter = "^1.1"
jupyterlab = "^4.3"
kiwisolver = "^1.4"
matplotlib = "^3.10"
matplotlib-inline = "^0.1"
networkx = "^3.4"
notebook = "^7.3"
numpy = "^1.26"
pandas = "^2.2"
pillow = "^11.0"
protobuf = "^4.25"
pyquil = "^4.15"
pytz = "^2024.2"
qiskit = "^1.3"
quil = "^0.13"
scikit-learn = "^1.6"
scipy = "^1.14"
six = "^1.17"
sympy = "^1.13"
tzdata = "^2024.2"
urllib3 = "^2.3"
qiskit-aer = "^0.16.0"
ipykernel = "^6.29.5"
pylatexenc = "^2.10"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "*"
pytest-cov = "*"
black = "*"
isort = "*"

[tool.poetry.scripts]
final_score = 'final_score.final_score:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
